--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aora",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "nativewind": "^4.1.23",
+    "node-appwrite": "^14.1.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-router": "~3.5.23",
+    "react-native-appwrite": "^0.5.0",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.2"
+    "react-native-url-polyfill": "^2.0.0",
+    "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
