--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
+    "@expo/metro-runtime": "^4.0.0",
+    "@react-navigation/drawer": "^7.0.7",
+    "@react-navigation/native": "^7.0.4",
+    "expo": "^52.0.11",
+    "expo-av": "^15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-status-bar": "~2.0.0",
+    "expo-video": "~2.0.1",
     "nativewind": "^4.1.23",
     "node-appwrite": "^14.1.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.5.0",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "tailwindcss": "^3.4.14"
   },
