--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
+    "expo-screen-orientation": "^8.0.0",
     "expo-status-bar": "~2.0.0",
     "expo-video": "~2.0.1",
     "nativewind": "^4.1.23",
