--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.0.2",
+    "typescript": "^5.7.2"
   },
   "private": true
 }
