--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "expo": "^52.0.11",
     "expo-av": "^15.0.1",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "^13.0.1",
+    "expo-file-system": "^18.0.4",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-screen-orientation": "^8.0.0",
@@ -30,7 +32,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
